<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="757dp"
        android:layout_height="427dp"
        android:background="@drawable/arcade1pixel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="598dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/pac_man_is_lost_in_the_arcade_world"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/findMainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/find_all_the_pac_mans"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="211dp"
        android:layout_height="68dp"
        android:layout_marginTop="249dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textSize="17sp"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginStart="530dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/creator_mohammad_haris_ahmad"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="560dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/skip"
        android:textAlignment="center"
        app:cornerRadius="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
